--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,7 +5,6 @@
     %link{:href => "/stylesheets/portfolio.css", :rel => "stylesheet"}/
     %link{:href => "/stylesheets/entry.css", :rel => "stylesheet"}/
   %body
-    #tags reserved for tags
-    = haml :'entry/list'
+    = yeild
     #footer
       %small Copyright Mark Poon 2012
